--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from statistics import mode, mean, median\n",
+    "from tqdm import tqdm\n",
+    "import requests\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (20,10)"
    ]
@@ -21,145 +23,6 @@
    "metadata": {},
    "source": [
     "# Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**To show that you have collected these files, please place your files somewhere that's accessible online (e.g. a github repo or a webpage) and link to your files from your notebook. (We will appreciate it if you store the wiki pages in plain text and the network as an edgelist. )**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The wikipages are stored as textfiles, the wikipages which we collected can be viewed at https://github.com/MarcBrejner/Wikipages-and-Edgelist\n",
-    "\n",
-    "On this link, the edgelist which we generate later in the notebook, can also be found at this repository."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Load 'marvel' csv files into python dict\n",
-    "marvel_data = list(csv.reader(open(\"marvel.csv\"))) \n",
-    "pickle.dump(marvel_data, open(\"marvel.p\", \"wb\"))\n",
-    "marvel_dict = pickle.load(open(\"marvel.p\", \"rb\"))\n",
-    "\n",
-    "#Load 'dc' csv files into python dict\n",
-    "dc_data = list(csv.reader(open(\"dc.csv\"))) \n",
-    "pickle.dump(dc_data, open(\"dc.p\", \"wb\")) \n",
-    "dc_dict = pickle.load(open(\"dc.p\", \"rb\"))\n",
-    "\n",
-    "#Delete the first entry of each dictionary, which is just the title of each column in the csv file\n",
-    "del dc_dict[0]\n",
-    "del marvel_dict[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Used to homogenize the titles to be able to properly compare them \n",
-    "def string_formatter(streng):\n",
-    "    return streng.replace(\" \", \"_\").replace(\"/\",\"-\").replace(\"\\\"\", \"\").replace(\"]]\",\"\").replace(\"[[\",\"\").replace(\"]\",\"\").replace(\"[\",\"\").replace(\".txt\",\"\").split(\"#\")[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Used to split strings in the csv file with '|'\n",
-    "def cv_splitter(streng):\n",
-    "    resultatet = [streng]\n",
-    "    if '|' in streng:\n",
-    "        return streng.split('|')\n",
-    "    return resultatet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Used to split links found in wikitext, the left side is always used (the right side is different names for the same thing)\n",
-    "def link_splitter(streng):\n",
-    "    if '|' in streng:\n",
-    "        return streng.split('|')[0]\n",
-    "    return streng"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2332\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Used for comparison later on\n",
-    "titles = []\n",
-    "dc_titles = []\n",
-    "marvel_titles = []\n",
-    "\n",
-    "#Populate the lists with the titles from the two dictionaries\n",
-    "for key in dc_dict:\n",
-    "    if key[2] != \"\":\n",
-    "        wiki_link = cv_splitter(key[2])\n",
-    "        titles = titles + wiki_link\n",
-    "        dc_titles = dc_titles + wiki_link\n",
-    "unsplit = []\n",
-    "for key in marvel_dict:\n",
-    "    if key[2] != \"\":\n",
-    "        wiki_link = cv_splitter(key[2])\n",
-    "        titles = titles + wiki_link\n",
-    "        marvel_titles = marvel_titles + wiki_link\n",
-    "\n",
-    "#remove duplicates\n",
-    "titles = list(set(titles))\n",
-    "marvel_titles = list(set(marvel_titles))\n",
-    "dc_titles = list(set(dc_titles))\n",
-    "\n",
-    "#Create uri definition\n",
-    "baseurl = \"https://en.wikipedia.org/w/api.php?\"\n",
-    "action = \"action=query\"\n",
-    "content = \"prop=revisions&rvprop=content\"\n",
-    "title = \"titles=\"\n",
-    "dataformat =\"format=json\"\n",
-    "rsvslot=\"rvslots=main\"\n",
-    "\n",
-    "#Create api queries as a list for marvel and dc respectively\n",
-    "dc_queries = [(string_formatter(dc_titles[i]), \"{}{}&{}&{}{}&{}&{}\".format(baseurl, action, content, title, urllib.parse.quote(dc_titles[i].replace(\" \", \"_\").encode('utf8')), dataformat, rsvslot)) for i in range(len(dc_titles))]\n",
-    "marvel_queries = [(string_formatter(marvel_titles[i]), \"{}{}&{}&{}{}&{}&{}\".format(baseurl, action, content, title, urllib.parse.quote(marvel_titles[i].replace(\" \", \"_\").encode('utf8')), dataformat, rsvslot)) for i in range(len(marvel_titles))]\n",
-    "\n",
-    "print(len(dc_queries + marvel_queries))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Used to read from a file\n",
-    "def read_wiki_text(wiki_response):\n",
-    "    wiki_data = wiki_response.read()\n",
-    "    return wiki_data.decode('utf-8')"
    ]
   },
   {
@@ -276,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +150,6 @@
     "anime_dir = os.listdir(anime_dir_path)\n",
     "manga_dir = os.listdir(manga_dir_path)\n",
     "\n",
-    "\n",
     "all_animes = []\n",
     "for file in anime_dir:\n",
     "    with open(os.path.join(anime_dir_path, file),'r') as f:\n",
@@ -297,155 +159,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_mangas = []\n",
-    "for file in manga_dir:\n",
-    "    with open(os.path.join(manga_dir_path, file),'r') as f:\n",
-    "        j = json.loads(f.read())\n",
-    "    all_mangas.append(j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anime_graph = nx.DiGraph()\n",
-    "for anime in all_animes:\n",
-    "    anime_graph.add_node(anime['mal_id'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "manga_graph = nx.DiGraph()\n",
-    "for manga in all_mangas:\n",
-    "    manga_graph.add_node(manga['mal_id'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DiGraph with 24223 nodes and 0 edges\n"
+      "24223\n"
      ]
     }
    ],
    "source": [
+    "print(len(all_animes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8319\n",
+      "4320\n",
+      "4301\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_anime_tv = [x for x in all_animes if x['type'] == 'TV']\n",
+    "print(len(all_anime_tv))\n",
+    "all_anime_tv = [x for x in all_anime_tv if x['score']]\n",
+    "print(len(all_anime_tv))\n",
+    "all_anime_tv = [x for x in all_anime_tv if x['synopsis']]\n",
+    "print(len(all_anime_tv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 4301 nodes and 0 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "anime_graph = nx.Graph()\n",
+    "for anime in all_anime_tv:\n",
+    "    anime_graph.add_node(anime['mal_id'])\n",
     "print(anime_graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[(1, 205, 118), (1, 6, 84), (1, 889, 66), (1, 400, 48), (1, 20057, 36), (1, 2251, 30), (1, 4087, 18), (1, 2025, 17), (1, 13601, 14), (1, 918, 13), (1, 467, 10), (1, 36563, 10), (1, 1412, 9), (1, 40052, 9), (1, 30, 9), (1, 24439, 8), (1, 790, 7), (1, 329, 5), (1, 567, 5), (1, 1575, 5), (1, 40256, 5), (1, 68, 5), (1, 1194, 4), (1, 6746, 4), (1, 47, 4), (1, 543, 4), (1, 411, 4), (1, 6675, 4), (1, 12531, 4), (1, 42310, 4), (1, 202, 4), (1, 1462, 4), (1, 474, 4), (1, 245, 4), (1, 2030, 3), (1, 2904, 3), (1, 1519, 3), (1, 12413, 3), (1, 13203, 3), (1, 31478, 3), (1, 2451, 3), (1, 23327, 3), (1, 25183, 3), (1, 28223, 3), (1, 27947, 3), (1, 36649, 3), (1, 3342, 3), (1, 267, 3), (1, 35889, 3), (1, 227, 3), (1, 650, 3), (1, 1470, 3), (1, 10087, 2), (1, 432, 2), (1, 593, 2), (1, 33983, 2), (1, 31163, 2), (1, 1292, 2), (1, 36023, 2), (1, 27, 2), (1, 424, 2), (1, 31973, 2), (1, 4981, 2), (1, 132, 2), (1, 32867, 2), (1, 228, 2), (1, 58, 2), (1, 457, 2), (1, 41433, 2), (1, 800, 2), (1, 11741, 2), (1, 9253, 2), (1, 1726, 2), (1, 122, 2), (1, 1430, 2), (1, 1025, 2), (1, 958, 2), (1, 2722, 2), (1, 5682, 2), (1, 25, 2), (1, 4039, 2), (1, 369, 1), (1, 49683, 1), (1, 1698, 1), (1, 1879, 1), (1, 1735, 1), (1, 263, 1), (1, 35857, 1), (1, 34096, 1), (1, 34866, 1), (1, 16498, 1), (1, 8888, 1), (1, 33731, 1), (1, 46102, 1), (1, 37451, 1), (1, 16774, 1), (1, 38003, 1), (1, 3670, 1), (1, 320, 1), (1, 87, 1), (1, 820, 1), (1, 42307, 1), (1, 81, 1), (1, 37435, 1), (1, 21, 1), (1, 3420, 1), (1, 8525, 1), (1, 252, 1), (1, 20507, 1), (1, 486, 1), (1, 2088, 1), (1, 21843, 1), (1, 43, 1), (1, 31964, 1), (1, 44, 1), (1, 271, 1), (1, 2582, 1), (1, 1466, 1), (1, 221, 1), (1, 6573, 1), (1, 1126, 1), (1, 1051, 1), (1, 1081, 1), (1, 321, 1), (1, 97, 1), (1, 1184, 1), (1, 48, 1), (1, 237, 1), (1, 4646, 1), (1, 1491, 1), (1, 198, 1), (1, 341, 1), (1, 522, 1), (1, 759, 1), (1, 1145, 1), (1, 33337, 1), (1, 121, 1), (1, 1483, 1), (1, 39592, 1), (1, 129, 1), (1, 15059, 1), (1, 35120, 1), (1, 26, 1), (1, 1589, 1), (1, 30276, 1), (1, 3436, 1), (1, 2921, 1), (1, 849, 1), (1, 49357, 1), (1, 1448, 1), (1, 306, 1), (1, 165, 1), (1, 1226, 1), (1, 22157, 1), (1, 2001, 1), (1, 7588, 1), (1, 416, 1), (1, 20, 1)]\n"
+      "100%|██████████| 4301/4301 [1:41:44<00:00,  1.42s/it]  \n"
      ]
     }
    ],
    "source": [
     "import time\n",
-    "\n",
-    "import requests\n",
-    "anime_edges = []\n",
-    "#for id in anime_graph.nodes():\n",
-    "r = requests.get('https://api.jikan.moe/v4/anime/{}/recommendations'.format(1))\n",
-    "if r.status_code == 200:\n",
-    "    #text = r.read().decode('utf-8')\n",
-    "    js = r.json()# = json.loads(r)\n",
-    "    recs = js['data']\n",
-    "    for rec in recs:\n",
-    "        anime_edges.append((1,rec['entry']['mal_id'],rec['votes']))\n",
-    "    time.sleep(0.5)\n",
-    "        \n",
-    "print(anime_edges)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
     "import requests\n",
     "from tqdm import tqdm\n",
     "anime_edges = []\n",
+    "error_codes = []\n",
+    "exceptions = []\n",
     "for id in tqdm(anime_graph.nodes()):\n",
     "#for id in anime_graph.nodes():\n",
-    "    r = requests.get('https://api.jikan.moe/v4/anime/{}/recommendations'.format(id))\n",
+    "    try:\n",
+    "        r = requests.get('https://api.jikan.moe/v4/anime/{}/recommendations'.format(id),timeout=10)  \n",
+    "    except Exception as e:\n",
+    "        exceptions.append(e)\n",
+    "    \n",
     "    if r.status_code == 200:\n",
     "        #text = r.read().decode('utf-8')\n",
     "        js = r.json()# = json.loads(r)\n",
     "        recs = js['data']\n",
     "        for rec in recs:\n",
     "            anime_edges.append((id,rec['entry']['mal_id'],rec['votes']))\n",
-    "        time.sleep(0.5)"
+    "        time.sleep(1)\n",
+    "    else:\n",
+    "        error_codes.append(r.status_code)\n",
+    "        \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "response = requests.get('https://api.jikan.moe/v4/anime/{}/recommendations'.format(49221))\n",
-    "if response.status_code == 200\n",
-    "    print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
-     "ename": "HTTPError",
-     "evalue": "HTTP Error 429: Too Many Requests",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Marc\\Documents\\Social\\SocialGraphs\\ProjectMAL\\project.ipynb Cell 22\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Marc/Documents/Social/SocialGraphs/ProjectMAL/project.ipynb#Y234sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m r \u001b[39m=\u001b[39m urllib\u001b[39m.\u001b[39;49mrequest\u001b[39m.\u001b[39;49murlopen(\u001b[39m'\u001b[39;49m\u001b[39mhttps://api.jikan.moe/v4/anime/\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m/recommendations\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mformat(\u001b[39m49221\u001b[39;49m))\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\urllib\\request.py:214\u001b[0m, in \u001b[0;36murlopen\u001b[1;34m(url, data, timeout, cafile, capath, cadefault, context)\u001b[0m\n\u001b[0;32m    212\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    213\u001b[0m     opener \u001b[39m=\u001b[39m _opener\n\u001b[1;32m--> 214\u001b[0m \u001b[39mreturn\u001b[39;00m opener\u001b[39m.\u001b[39;49mopen(url, data, timeout)\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\urllib\\request.py:523\u001b[0m, in \u001b[0;36mOpenerDirector.open\u001b[1;34m(self, fullurl, data, timeout)\u001b[0m\n\u001b[0;32m    521\u001b[0m \u001b[39mfor\u001b[39;00m processor \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess_response\u001b[39m.\u001b[39mget(protocol, []):\n\u001b[0;32m    522\u001b[0m     meth \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(processor, meth_name)\n\u001b[1;32m--> 523\u001b[0m     response \u001b[39m=\u001b[39m meth(req, response)\n\u001b[0;32m    525\u001b[0m \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\urllib\\request.py:632\u001b[0m, in \u001b[0;36mHTTPErrorProcessor.http_response\u001b[1;34m(self, request, response)\u001b[0m\n\u001b[0;32m    629\u001b[0m \u001b[39m# According to RFC 2616, \"2xx\" code indicates that the client's\u001b[39;00m\n\u001b[0;32m    630\u001b[0m \u001b[39m# request was successfully received, understood, and accepted.\u001b[39;00m\n\u001b[0;32m    631\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m code \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m):\n\u001b[1;32m--> 632\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparent\u001b[39m.\u001b[39;49merror(\n\u001b[0;32m    633\u001b[0m         \u001b[39m'\u001b[39;49m\u001b[39mhttp\u001b[39;49m\u001b[39m'\u001b[39;49m, request, response, code, msg, hdrs)\n\u001b[0;32m    635\u001b[0m \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\urllib\\request.py:561\u001b[0m, in \u001b[0;36mOpenerDirector.error\u001b[1;34m(self, proto, *args)\u001b[0m\n\u001b[0;32m    559\u001b[0m \u001b[39mif\u001b[39;00m http_err:\n\u001b[0;32m    560\u001b[0m     args \u001b[39m=\u001b[39m (\u001b[39mdict\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdefault\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mhttp_error_default\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m+\u001b[39m orig_args\n\u001b[1;32m--> 561\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_chain(\u001b[39m*\u001b[39;49margs)\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\urllib\\request.py:494\u001b[0m, in \u001b[0;36mOpenerDirector._call_chain\u001b[1;34m(self, chain, kind, meth_name, *args)\u001b[0m\n\u001b[0;32m    492\u001b[0m \u001b[39mfor\u001b[39;00m handler \u001b[39min\u001b[39;00m handlers:\n\u001b[0;32m    493\u001b[0m     func \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(handler, meth_name)\n\u001b[1;32m--> 494\u001b[0m     result \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs)\n\u001b[0;32m    495\u001b[0m     \u001b[39mif\u001b[39;00m result \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    496\u001b[0m         \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\urllib\\request.py:641\u001b[0m, in \u001b[0;36mHTTPDefaultErrorHandler.http_error_default\u001b[1;34m(self, req, fp, code, msg, hdrs)\u001b[0m\n\u001b[0;32m    640\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mhttp_error_default\u001b[39m(\u001b[39mself\u001b[39m, req, fp, code, msg, hdrs):\n\u001b[1;32m--> 641\u001b[0m     \u001b[39mraise\u001b[39;00m HTTPError(req\u001b[39m.\u001b[39mfull_url, code, msg, hdrs, fp)\n",
-      "\u001b[1;31mHTTPError\u001b[0m: HTTP Error 429: Too Many Requests"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n"
      ]
     }
    ],
    "source": [
-    "r = urllib.request.urlopen('https://api.jikan.moe/v4/anime/{}/recommendations'.format(49221))"
+    "print(len(exceptions))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76500\n",
+      "68540\n",
+      "Graph with 4301 nodes and 35130 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(anime_edges))\n",
+    "anime_nodes = anime_graph.nodes()\n",
+    "anime_edges_filtered = [x for x in anime_edges if x[0] in anime_nodes and x[1] in anime_nodes]\n",
+    "print(len(anime_edges_filtered))\n",
+    "anime_graph.add_weighted_edges_from(anime_edges_filtered)\n",
+    "print(anime_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "anime_graph.add_weighted_edges_from(anime_edges)"
+    "%store -r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_weighted_edgelist(anime_graph,\"data/edgeanimelist.txt\")"
    ]
   },
   {
