--- a/data_extractor.ipynb
+++ b/data_extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import pickle, csv, json, os, re\n",
     "import numpy as np\n",
     "from asyncore import read\n",
+    "import networkx as nx\n",
     "\n",
     "from time import sleep\n",
     "from tqdm import tqdm"
@@ -73,10 +74,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Similarly, we extract all manga pages, and save them locally"
+    "all_anime_tv = [x for x in all_animes if x['type'] == 'TV']\n",
+    "print(len(all_anime_tv))\n",
+    "all_anime_tv = [x for x in all_anime_tv if x['score']]\n",
+    "print(len(all_anime_tv))\n",
+    "all_anime_tv = [x for x in all_anime_tv if x['synopsis']]\n",
+    "print(len(all_anime_tv))"
    ]
   },
   {
@@ -85,13 +93,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_mangas = get_all_pages('manga')\n",
-    "\n",
-    "for manga in all_mangas:\n",
-    "    file_name = \"{}.txt\".format(manga['mal_id'])\n",
-    "    write_file = open(\"data/mangas/\"+file_name, \"w\")\n",
-    "    write_file.write(json.dumps(manga))\n",
-    "    write_file.close()"
+    "anime_graph = nx.Graph()\n",
+    "for anime in all_anime_tv:\n",
+    "    anime_graph.add_node(anime['mal_id'])\n",
+    "print(anime_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import requests\n",
+    "from tqdm import tqdm\n",
+    "anime_edges = []\n",
+    "error_codes = []\n",
+    "exceptions = []\n",
+    "for id in tqdm(anime_graph.nodes()):\n",
+    "#for id in anime_graph.nodes():\n",
+    "    try:\n",
+    "        r = requests.get('https://api.jikan.moe/v4/anime/{}/recommendations'.format(id),timeout=10)  \n",
+    "    except Exception as e:\n",
+    "        exceptions.append(e)\n",
+    "    \n",
+    "    if r.status_code == 200:\n",
+    "        #text = r.read().decode('utf-8')\n",
+    "        js = r.json()# = json.loads(r)\n",
+    "        recs = js['data']\n",
+    "        for rec in recs:\n",
+    "            anime_edges.append((id,rec['entry']['mal_id'],rec['votes']))\n",
+    "        time.sleep(1)\n",
+    "    else:\n",
+    "        error_codes.append(r.status_code)\n",
+    "print(\"Timeouts:\",len(exceptions))\n",
+    "print(\"Too many requests responses:\",len(error_codes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(anime_edges))\n",
+    "anime_nodes = anime_graph.nodes()\n",
+    "anime_edges_filtered = [x for x in anime_edges if x[0] in anime_nodes and x[1] in anime_nodes]\n",
+    "print(len(anime_edges_filtered))\n",
+    "anime_graph.add_weighted_edges_from(anime_edges_filtered)\n",
+    "print(anime_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.write_weighted_edgelist(anime_graph,\"data/edgeanimelist.txt\")"
    ]
   }
  ],
@@ -102,7 +162,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.2"
   },
   "orig_nbformat": 4,
