--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -2,13 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3528\n"
+     ]
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "\n",
-    "%store -r"
+    "anime_graph = nx.read_weighted_edgelist(\"data/edgeanimelist.txt\")\n",
+    "print(len(anime_graph))"
    ]
   }
  ],
