--- a/data_extractor.ipynb
+++ b/data_extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 975/975 [20:50<00:00,  1.28s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "all_animes = get_all_pages('anime')\n",
     "\n",
@@ -75,9 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8249\n",
+      "4344\n",
+      "4325\n"
+     ]
+    }
+   ],
    "source": [
     "all_anime_tv = [x for x in all_animes if x['type'] == 'TV']\n",
     "print(len(all_anime_tv))\n",
@@ -89,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 4304 nodes and 0 edges\n"
+     ]
+    }
+   ],
    "source": [
     "anime_graph = nx.Graph()\n",
     "for anime in all_anime_tv:\n",
@@ -101,9 +127,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4304/4304 [1:26:41<00:00,  1.21s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timeouts: 23\n",
+      "Too many requests responses: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import requests\n",
@@ -133,9 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75400\n",
+      "67550\n",
+      "Graph with 4304 nodes and 33996 edges\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(anime_edges))\n",
     "anime_nodes = anime_graph.nodes()\n",
@@ -147,11 +206,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 4304 nodes and 33996 edges\n"
+     ]
+    }
+   ],
    "source": [
+    "print(anime_graph)\n",
     "nx.write_weighted_edgelist(anime_graph,\"data/edgeanimelist.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 3493 nodes and 33996 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = nx.read_weighted_edgelist(\"data/edgeanimelist.txt\")\n",
+    "print(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph with 3493 nodes and 33996 edges\n"
+     ]
+    }
+   ],
+   "source": [
+    "for anime in all_anime_tv:\n",
+    "    if not g.nodes(anime['mal_id']):\n",
+    "        g.add_node(anime['mal_id'])\n",
+    "print(g)"
    ]
   }
  ],
